fix alignment main page

--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -108,7 +108,7 @@
 }
 
 .app__name {
-	padding-top: 15%;
+	padding-top: 20%;
 }
 
 .main__title {
